--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>ch.ethz.idsc</groupId>
 	<artifactId>aidamod</artifactId>
 	<version>1.4.7</version>
+	<packaging>jar</packaging>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
