--- a/submission.yaml
+++ b/submission.yaml
@@ -1,7 +1,7 @@
 challenge:
-- aido2_amod_efficiency_r1-v4
-- aido2_amod_fleet_size_r1-v4
-- aido2_amod_service_quality_r1-v4
+- aido2-AMOD-efficiency
+- aido2-AMOD-fleet_size
+- aido2-AMOD-service_quality
 protocol: aido2_amod1-v4
 user-label: "Java template"
 
