--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
--e git://github.com/duckietown/duckietown-shell.git@v4#egg=duckietown-shell
--e git://github.com/duckietown/duckietown-challenges.git@v4#egg=duckietown-challenges
+duckietown-challenges-daffy
+duckietown-shell>=5,<6
